# StableSR4RS

./: .gitignore
worldstrat_sd_upscaler/: .gitignore  README.md  pyproject.toml  requirements.txt
worldstrat_sd_upscaler/configs/: stage1_synthetic.yaml  stage2_cross_sensor.yaml
worldstrat_sd_upscaler/scripts/: evaluate_real.sh  evaluate_synthetic.sh  infer_real_test.sh  infer_synthetic_test.sh  setup_env.sh  smoke_test.sh  train_stage1.sh  train_stage2.sh  validate_data.sh
worldstrat_sd_upscaler/src/: __init__.py  condition_adapter.py  dataset.py  evaluate.py  infer_upscaler.py  metrics.py  train_lora_upscaler.py  utils.py  validate_dataset.py
worldstrat_sd_upscaler/tests/: test_condition_adapter.py  test_dataset_pairing.py  test_inference_geometry.py  test_inference_selection.py  test_low_frequency_projection.py  test_tokenizer_config.py
